[package]
name = "moq-vaapi"
version = "0.0.1"
description = "VA-API H.264 hardware encoder for Media over QUIC, vendored and trimmed from cros-libva + discord/cros-codecs"
authors = ["The ChromiumOS Authors", "Discord", "Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.85"

# moq-vaapi is excluded from the root workspace (it can't build without libva
# headers, so it must stay out of cross-platform `--workspace` sweeps; see the
# root Cargo.toml). This empty table makes it a standalone workspace root so that
# cargo, following moq-video's path dependency into it, doesn't walk up and bind
# it to the wrong parent workspace.
[workspace]

[features]
# libva is loaded at runtime (dlopen) rather than linked, so a built binary
# still links on a libva-less host and starts on machines without libva.
dlopen = []
# Vendor libva headers instead of finding them via pkg-config (probed by build.rs).
vendored = []

[dependencies]
anyhow = "1"
thiserror = "1"
bitflags = "2.5"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
regex = "1.11.1"
