[package]
name = "moq-vaapi"
version = "0.0.1"
description = "VA-API H.264 hardware encoder for Media over QUIC, vendored and trimmed from cros-libva + discord/cros-codecs"
authors = ["The ChromiumOS Authors", "Discord", "Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "BSD-3-Clause"
edition = "2021"
rust-version = "1.85"

# Excluded from the root workspace to keep the ~14k lines of vendored libva /
# cros-codecs code out of `cargo fmt --all` and every cross-platform
# `cargo check --workspace` sweep; it's built only as moq-video's (Linux-only)
# `vaapi`-feature dependency, and standalone via `just rs vaapi-check`. This empty
# table makes it a standalone workspace root so that cargo, following moq-video's
# path dependency into it, doesn't walk up and bind it to the parent workspace.
[workspace]

# Build is always hermetic: bindgen reads the vendored libva headers (the
# rs/moq-vaapi/libva submodule, pinned at a known VA-API version so a system libva
# bump can't drift the bindings), and libva is dlopen'd at runtime rather than
# linked (so a built binary links on a libva-less host and starts on machines
# without libva). There's no system-libva build path, so there are no features to
# toggle: the build needs only libclang (for bindgen) on any OS.

[dependencies]
anyhow = "1"
thiserror = "1"
bitflags = "2.5"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
bindgen = "0.70.1"
regex = "1.11.1"
