[package]
name = "moq-video"
description = "Native video capture/encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.3"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "video"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]

[lib]
doctest = false

[features]
# NVIDIA NVENC hardware encoder (Linux only). Off by default; release builds
# for Linux enable it. cudarc loads CUDA dynamically (no build-time CUDA), and
# the NVENC API lives in the driver, so this is not a build dependency.
nvenc = ["dep:nvidia-video-codec-sdk", "cudarc/dynamic-loading", "cudarc/cuda-12020"]
# Intel/AMD VAAPI hardware encoder (Linux only). Off by default; release builds
# for Linux enable it. Links libva (stable soname); pairs with a V4L2 dmabuf
# capture for a fully zero-copy path.
vaapi = ["dep:cros-codecs"]

[dependencies]
anyhow = "1"
bytes = "1"
# VAAPI H.264 encoder + dmabuf import. Gated behind `vaapi` + a linux cfg; pinned
# (pre-1.0 churns). Pulls libva (cros-libva) when the feature is on.
cros-codecs = { version = "=0.0.6", optional = true, default-features = false, features = ["vaapi"] }
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver"] }
moq-mux = { workspace = true }
moq-net = { workspace = true }
# Pure-Rust webcam capture (avfoundation / v4l2 / msmf), decoding MJPEG/YUYV to
# RGBA. Platform input backends are enabled per-target below.
nokhwa = { version = "0.10.11", default-features = false, features = ["decoding"] }
# NVENC backend, gated behind the `nvenc` feature + a linux cfg. Listed here
# (not under a target table) so the feature can reference it on any host; the
# code that uses it is `cfg(target_os = "linux")`.
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# Vendored, statically-linked software H.264 fallback (no system dependency).
openh264 = "0.9.3"
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = "0.1"
# RGBA -> I420 color conversion (replaces ffmpeg swscale).
yuv = "0.8.14"

[target.'cfg(target_os="linux")'.dependencies]
nokhwa = { version = "0.10.11", features = ["input-v4l"] }

[target.'cfg(target_os="macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
nokhwa = { version = "0.10.11", features = ["input-avfoundation"] }
objc2 = "0.6.4"
objc2-av-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
nokhwa = { version = "0.10.11", features = ["input-msmf"] }
