[package]
name = "moq-video"
description = "Native video capture/encoding/decoding for Media over QUIC"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.0.3"
edition = "2024"
rust-version.workspace = true

keywords = ["quic", "http3", "webtransport", "media", "video"]
categories = ["multimedia", "multimedia::video", "multimedia::encoding"]

[lib]
doctest = false

[features]
# NVIDIA NVENC hardware encoder (Linux only). Off by default; release builds
# for Linux enable it. cudarc loads CUDA dynamically (no build-time CUDA), and
# the NVENC API lives in the driver, so this is not a build dependency.
nvenc = ["dep:nvidia-video-codec-sdk", "cudarc/dynamic-loading", "cudarc/cuda-12020"]
# Compile-check NVENC without the SDK present. `nvidia-video-codec-sdk`'s
# build.rs panics if it can't find `libnvidia-encode.so`; its `ci-check` feature
# skips that link step so CI (and `--all-features`) can type-check the backend on
# a machine with no NVIDIA driver. Don't use for real builds: it produces a
# binary that won't link against NVENC.
nvenc-ci = ["nvenc", "nvidia-video-codec-sdk/ci-check"]

[dependencies]
anyhow = "1"
bytes = "1"
cudarc = { version = "0.16", optional = true, default-features = false, features = ["driver"] }
moq-mux = { workspace = true }
moq-net = { workspace = true }
# NVENC backend, gated behind the `nvenc` feature + a linux cfg. Listed here
# (not under a target table) so the feature can reference it on any host; the
# code that uses it is `cfg(target_os = "linux")`.
nvidia-video-codec-sdk = { version = "0.4", optional = true }
# Vendored, statically-linked software H.264 fallback (no system dependency).
openh264 = "0.9.3"
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = "0.1"
# RGBA -> I420 color conversion (replaces ffmpeg swscale).
yuv = "0.8.14"

[target.'cfg(target_os="linux")'.dependencies]
# Native V4L2 webcam capture (replaces nokhwa). `v4l` streams MMAP buffers;
# MJPEG cameras are decoded with the pure-Rust `zune-jpeg` (no libjpeg/IJG).
v4l = "0.14"
zune-jpeg = "0.5"

[target.'cfg(target_os="macos")'.dependencies]
block2 = "0.6.2"
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-av-foundation = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-media = "0.3.2"
objc2-core-video = "0.3.2"
objc2-foundation = "0.3.2"
objc2-screen-capture-kit = "0.3.2"
objc2-video-toolbox = "0.3.2"

[target.'cfg(target_os="windows")'.dependencies]
# Windows still uses nokhwa (Media Foundation) until a native MF capture lands;
# `decoding` handles its MJPEG/YUYV -> RGBA conversion.
nokhwa = { version = "0.10.11", default-features = false, features = ["input-msmf", "decoding"] }
